fixed bugs footer too big and banner not centered

--- a/kasa/src/styles/About.scss
+++ b/kasa/src/styles/About.scss
@@ -1,5 +1,8 @@
 .about {
 	box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	width: 100%;
 	padding: 0 1.5rem;
 
