--- a/kasa/src/styles/Footer.scss
+++ b/kasa/src/styles/Footer.scss
@@ -1,4 +1,5 @@
 .footer {
+	box-sizing: border-box;
 	width: 100%;
 	height: 13rem;
 	display: flex;
